# Adaptive-Advertisement

./: .env.example  .env.hardware.example  .gitignore  Adaptive_Retail_CSI_Rebaseline_CRM_Delta_Pack_v1_1.txt  Adaptive_Retail_Change_Resolution_Matrix_v1_0.md  Adaptive_Retail_Coding_AI_Governance_Charter_v1_0.docx  Adaptive_Retail_Design_Rationale_and_Implementation_Notes_v1_0.txt  Adaptive_Retail_System_Development_Snapshot_v1_0.md  Adaptive_Retail_Target_End_State_Vision_v1_0.txt  CLAUDE.md  Pilot_Validation_Protocol_v1_0.docx  README.md  docker-compose.hardware.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/audience-state/: README.md  cv-observation.schema.json
contracts/creative/: README.md  creative-manifest.schema.json
contracts/dashboard-api/: README.md  audit-event.schema.json  campaign-record.schema.json  system-status.schema.json  (+1 more)
decisions/: 2026-03-23-camera-sku-candidate.md
docs/: README.md  document-map.md
services/audience-state/: Dockerfile  pyproject.toml  requirements.txt
services/audience-state/audience_state/: __init__.py  config.py  health.py  main.py  observation_consumer.py  observation_store.py  signal_publisher.py
services/audience-state/tests/: conftest.py  test_health_server.py  test_observation_consumer.py  test_observation_store.py  test_signal_publisher.py
services/creative/: Dockerfile  pyproject.toml  requirements.txt
services/creative/creative/: __init__.py  api.py  config.py  main.py  manifest_store.py
services/creative/manifests/: manifest-attract.json  manifest-default.json  manifest-group.json
services/creative/tests/: conftest.py  test_api.py  test_manifest_store.py
services/dashboard-api/: Dockerfile  alembic.ini  pyproject.toml
services/dashboard-api/alembic/: env.py
services/dashboard-api/alembic/versions/: 0001_initial_schema.py  0002_analytics_tables.py  0002_impression_events.py  0003_add_gender_demographics.py  0003_manifest_audience_tags.py  0005_add_attention_and_attire.py
services/dashboard-api/dashboard_api/: audience_sink.py  config.py  db.py  events.py  health.py  impression_recorder.py  main.py  models.py  play_event_sink.py  rule_generator.py  schemas.py  uptime_sink.py
services/dashboard-api/dashboard_api/routers/: analytics.py  assets.py  campaigns.py  fallback.py  manifests.py  system.py
services/dashboard-api/tests/: conftest.py  test_analytics.py  test_audience_sink.py  test_campaigns.py  test_fallback.py  test_live.py  test_manifest_tags.py  test_manifests.py  test_play_event_sink.py  test_postgres_migration.py  test_rule_generator.py  test_system.py
services/decision-optimizer/: Dockerfile  pyproject.toml  requirements.txt
services/decision-optimizer/decision_optimizer/: __init__.py  config.py  decision_loop.py  health.py  main.py  player_gateway.py  policy.py  signal_consumer.py
services/decision-optimizer/rules/: default-rules.json
services/decision-optimizer/tests/: conftest.py  test_decision_loop.py  test_health_server.py  test_player_gateway.py  test_policy.py  test_signal_consumer.py
services/input-cv/: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/input-cv/config/: camera-source.example.json
services/input-cv/input_cv/: __init__.py  main.py
services/input-cv/input_cv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/input-cv/input_cv/config/: __init__.py  loader.py  settings.py
services/input-cv/input_cv/health/: __init__.py  server.py  tracker.py
services/input-cv/input_cv/observation/: __init__.py  builder.py  models.py
services/input-cv/input_cv/pipeline/: __init__.py  abstract.py  deepstream_driver.py  null_driver.py
services/input-cv/input_cv/publisher/: __init__.py  abstract.py  mqtt_publisher.py  null_publisher.py
services/input-cv/input_cv/recovery/: __init__.py  backoff.py
services/input-cv/tests/: conftest.py
services/input-cv/tests/integration/: test_missing_device_startup.py  test_reopen_behavior.py
services/input-cv/tests/unit/: test_backoff.py  test_config_invalid.py  test_config_valid.py  test_health_server.py  test_health_tracker.py  test_observation_model.py  test_privacy_negative.py  test_publisher.py
services/player/: Dockerfile  pyproject.toml  requirements.txt
services/player/player/: __init__.py  command_handler.py  config.py  event_publisher.py  fallback.py  health.py  main.py  manifest_store.py  play_event_publisher.py  renderer.py  state.py
services/player/tests/: conftest.py  test_command_handler.py  test_event_publisher.py  test_health_server.py  test_manifest_store.py  test_manifest_store_reload.py  test_state.py
services/shared/: pyproject.toml
services/shared/adaptive_shared/: __init__.py  log_config.py  metrics.py
services/supervisor/: Dockerfile  pyproject.toml  requirements.txt
services/supervisor/supervisor/: config.py  health.py  health_probe.py  main.py  restart_manager.py  safe_mode_relay.py  service_table.py  storage_monitor.py
services/supervisor/tests/: conftest.py  test_fault_injection.py  test_health_probe.py  test_health_server.py  test_restart_manager.py  test_safe_mode_relay.py  test_storage_monitor.py
tests/: test_no_hardcoded_values.py
tools/: ci-triage-and-run.sh  preflight-hardware.sh  sim-cv-injector.py
(+130 files in other folders)
