[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "audience-state"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.0,<3.0",
    "aiohttp>=3.9,<4.0",
    "jsonschema>=4.21,<5.0",
]

[project.scripts]
audience-state = "audience_state.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["audience_state*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
