[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "creative"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "jsonschema>=4.21,<5.0",
]

[project.scripts]
creative = "creative.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["creative*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
