[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dashboard-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API framework
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    # DB — async SQLAlchemy + PostgreSQL driver
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    # Validation
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    # HTTP client for health aggregation
    "aiohttp>=3.9,<4.0",
    # File upload support (FastAPI UploadFile requires this)
    "python-multipart>=0.0.9,<1.0",
]

[project.scripts]
dashboard-api = "dashboard_api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dashboard_api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]
