[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-shared"
version = "0.1.0"
description = "Shared utilities for Adaptive Advertisement services"
requires-python = ">=3.11"
dependencies = ["prometheus-client>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptive_shared*"]
