[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supervisor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4.0",
]

[project.scripts]
supervisor = "supervisor.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["supervisor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
